# flight-project

./: CMakeLists.txt  Command.cpp  Command.h  CommandFactory.cpp  CommandFactory.h  Expression.cpp  Expression.h  ExpressionInterpreter.cpp  ExpressionInterpreter.h  FromAeroplaneServer.cpp  FromAeroplaneServer.h  OpenServerCommand.cpp  OpenServerCommand.h  README.md  TelnetClient.cpp  TelnetClient.h  TelnetServer.cpp  TelnetServer.h  ToAeroplaneClient.cpp  ToAeroplaneClient.h  client.cpp  client.h  command.h  commandFromFileToMap.cpp  commandFromFileToMap.h  connectControlClient.cpp  connectControlClient.h  controlFly.cpp  controlFly.h  ex1.h  fly.txt  globals_singleton.h  ifWhileCommandFromFileToMap.cpp  ifWhileCommandFromFileToMap.h  lexer.cpp  lexer.h  lexerFile.cpp  lexerFile.h  main.cpp  openServerCommand.cpp  (+14 more)
